--- a/domspatzen-quantum/package.json
+++ b/domspatzen-quantum/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.1.0",
+    "eslint": "^7.5.0",
+    "eslint-plugin-nuxt": "^1.0.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.0",
     "imagemin-svgo": "^8.0.0",
