--- a/domspatzen-quantum/package.json
+++ b/domspatzen-quantum/package.json
@@ -19,6 +19,9 @@
   },
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.1.0",
+    "@nuxtjs/eslint-config": "^3.0.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.5.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "imagemin-mozjpeg": "^9.0.0",
