--- a/domspatzen-quantum/package.json
+++ b/domspatzen-quantum/package.json
@@ -17,7 +17,7 @@
     "@nuxtjs/pwa": "^3.0.1",
     "mozjpeg": "^7.0.0",
     "nuxt": "^2.14.3",
-    "responsive-loader": "npm:responsive-loader-webp@^1.2.0-beta.2",
+    "responsive-loader": "^2.0.2",
     "vue-lazyload": "^1.3.3"
   },
   "devDependencies": {
