--- a/domspatzen-quantum/package.json
+++ b/domspatzen-quantum/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.1",
+    "modern-vue-gallery": "^1.1.0",
     "mozjpeg": "^7.0.0",
     "nuxt": "^2.14.3",
     "responsive-loader": "^2.0.2",
