--- a/domspatzen-quantum/package.json
+++ b/domspatzen-quantum/package.json
@@ -2,7 +2,7 @@
   "name": "domspatzen-quantum",
   "version": "1.0.0",
   "description": "The website for our Jugend Forscht Project",
-  "author": "TessyPowder",
+  "author": "Jonathan Treffler",
   "private": true,
   "scripts": {
     "dev": "nuxt",
